--- a/crates/broker/Cargo.toml
+++ b/crates/broker/Cargo.toml
@@ -11,7 +11,7 @@ publish = false
 release = false
 
 [dependencies]
-alloy = { workspace = true, features = ["network", "providers", "transports", "sol-types", "contract", "signers", "signer-local", "rpc", "rpc-types"] }
+alloy = { workspace = true, features = ["network", "providers", "transports", "sol-types", "contract", "signers", "signer-local", "rpc", "rpc-types", "consensus"] }
 alloy-chains = "0.2.0"
 anyhow = { workspace = true }
 async-channel = "2.3"
@@ -51,6 +51,7 @@ tracing = { workspace = true }
 tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
 url = { workspace = true }
 uuid = { workspace = true }
+rustls = { version = "0.23", features = ["ring"] }
 
 [dev-dependencies]
 alloy = { workspace = true, features = ["node-bindings"] }
